增加Internal命名空间

--- a/CoEvent/Runtime/CoEvent.asmdef
+++ b/CoEvent/Runtime/CoEvent.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "CoEvent",
+    "name": "CoEvent.Runtime",
     "rootNamespace": "CoEvent",
     "references": [],
     "includePlatforms": [],
