--- a/CoEvent/Runtime/CoEvent.asmdef
+++ b/CoEvent/Runtime/CoEvent.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "CoEvent.Runtime",
-    "rootNamespace": "CoEvent",
+    "rootNamespace": "CoEvents",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
